k8s/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: default-http-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/google_containers/defaultbackend:1.4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              cpu: 10m
              memory: 20Mi
